Modified CMakeLists.txt to use OpenCV4 and python3 as defaults instead of OpenCV3 and python2.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,36 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(yolov4_trt_ros)
 
-find_package(OpenCV 3.0 REQUIRED)
+if(NOT ANDROID)
+  find_package(PythonLibs)
+
+  if(PYTHONLIBS_VERSION_STRING VERSION_LESS "3.8")
+    # Debian Buster
+    find_package(Boost REQUIRED python3)
+  else()
+    # Ubuntu Focal
+    find_package(Boost REQUIRED python)
+  endif()
+else()
+find_package(Boost REQUIRED)
+endif()
+
+set(_opencv_version 4)
+find_package(OpenCV 4 QUIET)
+if(NOT OpenCV_FOUND)
+  message(STATUS "Did not find OpenCV 4, trying OpenCV 3")
+  set(_opencv_version 3)
+endif()
+
+find_package(OpenCV ${_opencv_version} REQUIRED
+  COMPONENTS
+    opencv_core
+    opencv_imgproc
+    opencv_imgcodecs
+  CONFIG
+)
+
+# find_package(OpenCV 3.0 REQUIRED)
 find_package(jetson-utils REQUIRED)
 find_package(jetson-inference REQUIRED)
 find_package(CUDA REQUIRED)
@@ -9,6 +38,11 @@ find_package(CUDA REQUIRED)
 catkin_python_setup()
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/package.xml ${CMAKE_CURRENT_SOURCE_DIR}/package.xml COPYONLY)
+
+# Begin OpenCV4 change
+# include_directories(include ${Boost_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
+# link_directories(${Boost_LIBRARY_DIRS})
+# End OpenCV4 change
 
 find_package(catkin REQUIRED COMPONENTS
   image_transport
